# bgfx-test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bgfx-test.code-workspace  conanfile.py  conanfile.txt
cmake/: utils.cmake
code/src/: main.cpp
